# entirius-django-pricemanager

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: erd-config.yaml
src/django_pricemanager/: admin.py  apps.py  bi.py  output.py  output_bundle.py  output_custom.py  settings.py  tasks.py  urls.py  views.py  workers.py
src/django_pricemanager/api/admin/: pagination.py  permissions.py  urls.py
src/django_pricemanager/api/admin/views/: channel_views.py  price_views.py  tax_class_views.py
src/django_pricemanager/domains/: __init__.py
src/django_pricemanager/domains/abstract/: __init__.py  pricemanager.py
src/django_pricemanager/management/commands/: backfill_demo_price_history.py  import-pricelist-from-csv.py  import-taxclass-from-csv.py  manage-pricelists.py  migrate_to_current_price.py  pricemanager-garbage-collector.py
src/django_pricemanager/migrations/: 0001_squashed_0024_remove_currentprice_supplier_cost_fields.py
src/django_pricemanager/models/: __init__.py  attr_representation.py  channel.py  choices.py  current_price.py  current_price_attribute.py  customer_representation.py  pm_settings.py  price.py  price_history.py  pricelist.py  product_representation.py  purchase_cost.py  sale_channel.py  tax_class.py  tax_rate.py
src/django_pricemanager/models/managers/: __init__.py  country.py  price.py
src/django_pricemanager/repository/: __init__.py  repository.py
src/django_pricemanager/schemas/requests/: channel.py  price.py  tax_class.py
src/django_pricemanager/schemas/responses/: channel.py  price.py  tax_class.py
src/django_pricemanager/services/: __init__.py  channel_sync_service.py  garbage_collector.py  migration_service.py  price_edit_service.py  price_output_service.py  pricelist_service.py  product_representation_service.py  product_representation_service_attr.py  sale_channel_service.py  supplier_cost_service.py  tax_class_service.py
src/django_pricemanager/signals/: dispatch.py  handlers.py  killswitch.py  supplier_cost.py
tests/: conftest.py  factories.py  settings.py  test_admin_api.py  test_country_generation.py  test_csv_import.py  test_models.py  test_output_compatibility.py  test_price_edit_service.py  test_price_history.py  test_race_conditions.py  test_signals.py  test_slash_sku_routing.py  test_supplier_cost_e2e.py  test_supplier_cost_receiver.py
