[project]
name = "entirius-django-pricemanager"
version = "4.0.1"
description = "Price management for the Volkanos ecommerce platform: product prices across countries, currencies, channels, and tax regimes"
authors = [{ name = "Entirius" }]
readme = "README.md"
requires-python = ">=3.11"
license = "MPL-2.0"
dependencies = [
    "django>=5.0",
    "celery>=5.2.6",
    "celery-once>=3.0.1",
    "djangorestframework>=3.14",
    "djangorestframework-simplejwt>=5.3",
    "drf-spectacular>=0.27",
    "pydantic>=2.0",
    "tqdm",
    "entirius-py-bievents>=2.0.0",
    "entirius-py-idx-normalizator>=2.0.0",
    "entirius-py-int-enum-choices>=2.0.0",
    "entirius-py-lockfile>=2.0.0",
    "entirius-py-process-logger>=2.0.0",
    "entirius-django-regional>=2.0.1",
    "entirius-django-utils>=2.0.0",
]

[project.optional-dependencies]
dev  = ["ruff", "pre-commit"]
test = ["pytest", "pytest-django", "pytest-mock", "factory-boy", "dj-database-url", "psycopg[binary]"]

[project.urls]
Repository = "https://github.com/entirius/entirius-django-pricemanager"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/django_pricemanager"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "DJ", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101", "S105", "S106", "F841"]
# Legacy migrated 1:1 — pre-existing lint debt, tracked outside this repo; do not grow these lists.
"src/django_pricemanager/*.py" = ["E402", "F841", "UP031"]
"src/django_pricemanager/api/**" = ["B904"]
"src/django_pricemanager/models/**" = ["DJ008", "DJ012", "F841"]
"src/django_pricemanager/repository/*" = ["C401"]
"src/django_pricemanager/services/*" = ["B007", "B904", "E711", "F841", "S108"]

[tool.ruff.lint.isort]
known-first-party = ["django_pricemanager"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
pythonpath = ["."]

[tool.deptry]
pep621_dev_dependency_groups = ["dev", "test"]

[tool.deptry.per_rule_ignores]
# Soft integrations guarded by try/except ImportError: channel sync reads django_pim.Channel,
# the supplier-cost receiver subscribes to django_suppliers signals. Both no-op when absent.
DEP001 = ["django_pim", "django_suppliers"]
